seminar/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seminar-ingress
  namespace: seminar
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`seminar.sungju.xyz`)
      services:
        - name: seminar-service
          port: 8080
