seminar/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: seminar
spec:
  podSelector: {}
  policyTypes:
    - Ingress
